--- a/index.html
+++ b/index.html
@@ -93,5 +93,5 @@
             </td>
           </tr>
         </table>
-        <h3><a href="C:\Users\Anja Ricks\Desktop\Gardeh Docs\Web Development(Full Stack)\HTML PERSONAL SITE\Contacts.html">CONTACTS</a></h3>
+        <h3><a href="Contacts.html">CONTACTS</a></h3>
 </html>
