--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table>
       <tr>
-        <td><img src="C:\Users\Anja Ricks\Desktop\Gardeh Docs\Web Development(Full Stack)\HTML PERSONAL SITE\anja and gardeh 6.jpg" alt="Messi"></td>
+        <td><img src="anja and gardeh 6.jpg" alt="Messi"></td>
         <td><h1>Gardeh N. Garteh, BBA, MSc.</h1>
         <h4>Researcher, Management Expert, Fullstack Web Developer</h4></td>
       </tr>
