--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
           <tbody>
             <tr>
               <td>Future Builders Foundation School</td>
-              <td>2012-2022</td>
+              <td>20120-2022</td>
             </tr>
             <tr>
               <td>RLG</td>
-              <td>2022-2022</td>
+              <td>2019-2020</td>
             </tr>
           </tbody>
         </table>
@@ -87,7 +87,7 @@
           <tr>
             <td>Web design</td>
             <td>🌟🌟🌟🌟🌟</td>
-            <td>Tennis</td>
+            <td>Project Management</td>
             <td>
             🌟🌟🌟🌟
             </td>
