--- a/Contacts.html
+++ b/Contacts.html
@@ -7,9 +7,9 @@
   <body>
     <h4>Contacts</h4>
       <p>+231-770191881</p>
-      <p><a href="https://www.facebook.com/">Facebook</a></p>
-        <p><a href="https://twitter.com/home">Twitter</a></p>
-        <p><a href="https://www.youtube.com/">Youtube</a></p>
+      <p><a href="https://www.facebook.com/profile.php?id=100004849025774">Facebook</a></p>
+        <p><a href="https://twitter.com/GGarteh">Twitter</a></p>
+        <p><a href="https://www.linkedin.com/in/gardeh-garteh-3b58301a5/">LinkedIn</a></p>
         <br>
         <hr>
         <h3>Would You Like to Get in Contact With Me?</h3>
